
Moqui Framework 1.5.4 is a minor new feature and bug fix release.

TODO

New Features:

- Localized strings may now contain a double hash (##) to specify context
  where a single word in the default language (ie English) is ambiguous; at
  runtime if no matching LocalizedMessage is found the text before the
  double hash will be used to lookup records or as the default value

Bug Fixes:

- Fixed issue in the Tools EntityDetail screen where entities with many
  dependents (like Enumeration, Uom, etc) caused an out of memory error;
  GitHub issue #149

===========================================================================
Release 1.5.3 - 11 Sep 2015
===========================================================================

Moqui Framework 1.5.3 is a minor new feature and bug fix release.

This release includes various smaller improvements and bug fixes, and a
number of library updates. There are no significant new features but many
smaller improvements and cleanups.

There are around 400 commits since the last release and an increase in size
from around 65k lines to around 67k lines of text (primarily Java, Groovy,
XML, XSD, and FTL files; not including files from other projects). The
System and Tools apps have 56 screens and 121 forms. Moqui has 127 entities
and 70 services.

New Features:

- Library Updates
  - Apache Camel to 2.15.3
  - Apache Commons Codec to 1.10
  - Apache Commons CSV to 1.2
  - Apache Commons Email to 1.4
  - Apache Commons File Upload to 1.3.1
  - Apache Commons Validator to 1.4.1
  - Apache FOP to 2.0 (with Batik 1.8 and XML Graphics Commons 2.0.1)
  - Apache HTTP Core to 4.4.3
  - Apache HTTP Client to 4.5
  - Apache Jackrabbit to 2.10.1
  - Apache Shiro to 1.2.4
  - Drools and KIE to 6.2.0.Final
  - Elasticsearch to 1.7.1
  - Ehcache to 2.10.0
  - Freemarker to 2.3.23
  - Groovy to 2.4.4
  - Liquibase to 3.4.1
  - OrientDB to 2.1.2
  - OWASP ESAPI to 2.1.0 (with AntiSamy 1.5.3)
  - SLF4J to 1.7.12
  - other misc updates
