@@ -50,6 +50,7 @@ public class EntityDefinition {
     // small lists, but very frequently accessed
     protected ArrayList<String> pkFieldNameList = null
     protected ArrayList<String> nonPkFieldNameList = null
+    protected ArrayList<FieldInfo> nonPkFieldInfoList = null
     protected ArrayList<String> allFieldNameList = null
     protected Boolean hasUserFields = null
     protected Boolean allowUserField = null
@@ -177,14 +178,14 @@ public class EntityDefinition {
     @CompileStatic
     boolean createOnly() {
         if (createOnlyVal != null) return createOnlyVal
-        createOnlyVal = internalEntityNode.attribute('create-only') == "true"
+        createOnlyVal = "true".equals(internalEntityNode.attribute('create-only'))
         return createOnlyVal
     }
 
     @CompileStatic
     boolean optimisticLock() {
         if (optimisticLockVal != null) return optimisticLockVal
-        optimisticLockVal = internalEntityNode.attribute('optimistic-lock') == "true"
+        optimisticLockVal = "true".equals(internalEntityNode.attribute('optimistic-lock'))
         return optimisticLockVal
     }
 
@@ -268,6 +269,18 @@ public class EntityDefinition {
         fieldInfoMap.put(fieldName, fi)
         return fi
     }
+    @CompileStatic
+    ArrayList<FieldInfo> getNonPkFieldInfoList() {
+        if (nonPkFieldInfoList != null) return nonPkFieldInfoList
+
+        ArrayList<String> nonPkFieldNameList = getNonPkFieldNames()
+        int nonPkFieldNameListSize = nonPkFieldNameList.size()
+        ArrayList<FieldInfo> tempList = new ArrayList<>(nonPkFieldNameListSize)
+        for (int i = 0; i < nonPkFieldNameListSize; i++) tempList.add(getFieldInfo(nonPkFieldNameList.get(i)))
+
+        nonPkFieldInfoList = tempList
+        return nonPkFieldInfoList
+    }
 
     @CompileStatic
     static class FieldInfo {
@@ -285,6 +298,7 @@ public class EntityDefinition {
         boolean isSimple
         boolean enableLocalization
         boolean isUserField
+        boolean createOnly
 
         FieldInfo(EntityDefinition ed, Node fieldNode) {
             this.ed = ed
@@ -309,6 +323,7 @@ public class EntityDefinition {
             enableLocalization = 'true'.equals(fnAttrs.get('enable-localization'))
             isUserField = 'true'.equals(fnAttrs.get('is-user-field'))
             isSimple = !enableLocalization && !isUserField
+            createOnly = fnAttrs.get('create-only') ? 'true'.equals(fnAttrs.get('create-only')) : ed.createOnly()
         }
 
         String getFullColumnName(boolean includeFunctionAndComplex) {
